force-app/main/default/objects/EligibleMunicipality__c/EligibleMunicipality__c.object-meta.xml
<CustomObject>
    <description>Oggetto di configurazione per lafunzionalità di configurazione offerta tecnica</description>
    <label>Comune Eleggibile</label>
    <nameField>
        <label>EligibleMunicipality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comuni Eleggibili</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>