force-app/main/default/objects/EligibleMunicipality__c/fields/AreaCode__c.field-meta.xml
<CustomField>
    <fullName>AreaCode__c</fullName>
    <description>Contiene il codice della provincia</description>
    <label>Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>