force-app/main/default/objects/EligibleMunicipality__c/fields/EligibilityCriteria__c.field-meta.xml
<CustomField>
    <fullName>EligibilityCriteria__c</fullName>
    <description>Campo di configurazione usato per effettuare lookup verso un  criterio di Eleggiblità.</description>
    <label>Criterio di Eleggibilita</label>
    <referenceTo>EligibilityCriteria__c</referenceTo>
    <relationshipLabel>Comuni Eleggibili</relationshipLabel>
    <relationshipName>Comuni_Eleggibili</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>