force-app/main/default/objects/EligibleMunicipality__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Contiene il nome della provincia</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>