force-app/main/default/objects/EligibleMunicipality__c/fields/NameExternalId__c.field-meta.xml
<CustomField>
    <fullName>NameExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>